argocd/iac/terraform/examples/eks/akuity/gitops/apps/guestbook/guestbook-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: guestbook-ui
